--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header a:hover{
 
 section > p {
     font-family: var(--fonteTexto);
-    padding: 30px 0px 30px 10px;
+    padding: 30px 0px 50px 10px;
     font-size: 1.7em;
 }
 
@@ -72,6 +72,7 @@ section > p {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-position: right center;
 }
 
 #img2{
@@ -79,4 +80,25 @@ section > p {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+
+footer {
+    background-color: black;
+    font-size: 0.5em;
+}
+
+footer > p{
+    text-align: center;
+    color: white;
+    padding: 5px;
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
+footer a:hover{
+    text-decoration: underline;
 }
