--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header > h1 {
 header p {
     font-family:  Verdana, Geneva, Tahoma, sans-serif;
     color: white;
-    font-size: 0.6em;
+    font-size: 1.5vw;
     padding-bottom: 30px;
 
 }
